# jiba-cli

./: .gitignore  PLAN.md  README.md  pyproject.toml
.claude/: CLAUDE.md
src/jiba/: __init__.py  cli.py  detector.py  library.py  matcher.py  models.py  orchestrator.py
tests/: test_cli.py  test_detector.py  test_library.py  test_matcher.py  test_orchestrator.py
tests/fixtures/: sample_library.xml
