[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jiba-cli"
version = "0.1.0"
description = "Restore original language titles in Apple Music/iTunes libraries"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.25",
    "langdetect>=1.0.9",
]

[project.scripts]
jiba = "jiba.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
